updated builder to 4.0.0. Removed tara plugin